generated-in/docking/dcimgui_nodefaultargfunctions_internal.h

// Flags
typedef int ImDrawTextFlags;            // -> enum ImDrawTextFlags_         // Flags: for ImTextCalcWordWrapPositionEx()
CIMGUI_API int         cImStricmp(const char* str1, const char* str2);                      // Case insensitive compare.
CIMGUI_API int         cImStrnicmp(const char* str1, const char* str2, size_t count);       // Case insensitive compare to a certain count.
CIMGUI_API void        cImStrncpy(char* dst, const char* src, size_t count);                // Copy to a certain count and always zero terminate (strncpy doesn't).
CIMGUI_API char*       cImStrdup(const char* str);                                          // Duplicate a string.
CIMGUI_API char*       cImStrdupcpy(char* dst, size_t* p_dst_size, const char* str);        // Copy in provided buffer, recreate buffer if needed.
CIMGUI_API const char* cImStrchrRange(const char* str_begin, const char* str_end, char c);  // Find first occurrence of 'c' in string range.
CIMGUI_API const char* cImStreolRange(const char* str, const char* str_end);                // End end-of-line
CIMGUI_API const char* cImStristr(const char* haystack, const char* haystack_end, const char* needle, const char* needle_end); // Find a substring in a string range.
CIMGUI_API void        cImStrTrimBlanks(char* str);                                         // Remove leading and trailing blanks from a buffer.
CIMGUI_API const char* cImStrSkipBlank(const char* str);                                    // Find first non-blank character.
CIMGUI_API int         cImStrlenW(const ImWchar* str);                                      // Computer string length (ImWchar string)
CIMGUI_API const char* cImStrbol(const char* buf_mid_line, const char* buf_begin);          // Find beginning-of-line
IM_MSVC_RUNTIME_CHECKS_OFF
CIMGUI_API char        cImToUpper(char c);
CIMGUI_API const char* cImParseFormatFindStart(const char* format);
CIMGUI_API const char* cImParseFormatFindEnd(const char* format);
CIMGUI_API const char* cImParseFormatTrimDecorations(const char* format, char* buf, size_t buf_size);
CIMGUI_API void        cImParseFormatSanitizeForPrinting(const char* fmt_in, char* fmt_out, size_t fmt_out_size);
CIMGUI_API const char* cImParseFormatSanitizeForScanning(const char* fmt_in, char* fmt_out, size_t fmt_out_size);
CIMGUI_API int         cImParseFormatPrecision(const char* format, int default_value);
// Helpers: UTF-8 <> wchar conversions
CIMGUI_API int         cImTextCharToUtf8(char out_buf[5], unsigned int c);                                                      // return output UTF-8 bytes count
CIMGUI_API int         cImTextStrToUtf8(char* out_buf, int out_buf_size, const ImWchar* in_text, const ImWchar* in_text_end);   // return output UTF-8 bytes count
CIMGUI_API int         cImTextCharFromUtf8(unsigned int* out_char, const char* in_text, const char* in_text_end);               // read one character. return input UTF-8 bytes count
CIMGUI_API int         cImTextStrFromUtf8(ImWchar* out_buf, int out_buf_size, const char* in_text, const char* in_text_end, const char** in_remaining /* = NULL */); // return input UTF-8 bytes count
CIMGUI_API int         cImTextCountCharsFromUtf8(const char* in_text, const char* in_text_end);                                 // return number of UTF-8 code-points (NOT bytes count)
CIMGUI_API int         cImTextCountUtf8BytesFromChar(const char* in_text, const char* in_text_end);                             // return number of bytes to express one char in UTF-8
CIMGUI_API int         cImTextCountUtf8BytesFromStr(const ImWchar* in_text, const ImWchar* in_text_end);                        // return number of bytes to express string in UTF-8
CIMGUI_API const char* cImTextFindPreviousUtf8Codepoint(const char* in_text_start, const char* in_p);                           // return previous UTF-8 code-point.
CIMGUI_API const char* cImTextFindValidUtf8CodepointEnd(const char* in_text_start, const char* in_text_end, const char* in_p);  // return previous UTF-8 code-point if 'in_p' is not the end of a valid one.
CIMGUI_API int         cImTextCountLines(const char* in_text, const char* in_text_end);                                         // return number of lines taken by text. trailing carriage return doesn't count as an extra line.
CIMGUI_API const char* cImTextCalcWordWrapNextLineStart(const char* text, const char* text_end, ImDrawTextFlags flags /* = 0 */);  // trim trailing space and find beginning of next line
// Character classification for word-wrapping logic
typedef enum
{
    ImWcharClass_Blank,
    ImWcharClass_Punct,
    ImWcharClass_Other,
} ImWcharClass;
CIMGUI_API void cImTextInitClassifiers(void);
CIMGUI_API void cImTextClassifierClear(ImU32* bits, unsigned int codepoint_min, unsigned int codepoint_end, ImWcharClass char_class);
CIMGUI_API void cImTextClassifierSetCharClass(ImU32* bits, unsigned int codepoint_min, unsigned int codepoint_end, ImWcharClass char_class, unsigned int c);
CIMGUI_API void cImTextClassifierSetCharClassFromStr(ImU32* bits, unsigned int codepoint_min, unsigned int codepoint_end, ImWcharClass char_class, const char* s);
CIMGUI_API float  cImPow(float x, float y);          // DragBehaviorT/SliderBehaviorT uses ImPow with either float/double and need the precision
CIMGUI_API double cImPowDouble(double x, double y);
CIMGUI_API float  cImSign(float x);                  // Sign operator - returns -1, 0 or 1 based on sign of argument
CIMGUI_API double cImSignDouble(double x);
CIMGUI_API float cImRsqrt(float x);
CIMGUI_API double cImRsqrtDouble(double x);
CIMGUI_API float  cImSaturate(float f);
CIMGUI_API float  cImRound64(float f);                                                   // FIXME: Positive values only.
CIMGUI_API ImVec2 cImRotate(ImVec2 v, float cos_a, float sin_a);
CIMGUI_API ImVec2 cImTriangleClosestPoint(ImVec2 a, ImVec2 b, ImVec2 c, ImVec2 p);
CIMGUI_API void   cImTriangleBarycentricCoords(ImVec2 a, ImVec2 b, ImVec2 c, ImVec2 p, float* out_u, float* out_v, float* out_w);
CIMGUI_API float  cImTriangleArea(ImVec2 a, ImVec2 b, ImVec2 c);
typedef enum
{
    ImGuiPlotType_Lines,
    ImGuiPlotType_Histogram,
} ImGuiPlotType;
// Plot
CIMGUI_API int ImGui_PlotEx(ImGuiPlotType plot_type, const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 size_arg);
CIMGUI_API int         cImTextureDataGetFormatBytesPerPixel(ImTextureFormat format);
CIMGUI_API const char* cImTextureDataGetStatusName(ImTextureStatus status);
CIMGUI_API const char* cImTextureDataGetFormatName(ImTextureFormat format);