generated-out/vanilla/dear-imgui-raw-vanilla-internal/cbits/DearImGuiWrappers.h

void cImRotate_wrap(ImVec2 const* v, float cos_a, float sin_a, ImVec2* _out);
float cImTriangleArea_wrap(ImVec2 const* a, ImVec2 const* b, ImVec2 const* c);
void cImTriangleBarycentricCoords_wrap(ImVec2 const* a, ImVec2 const* b, ImVec2 const* c, ImVec2 const* p, float* out_u, float* out_v, float* out_w);
void cImTriangleClosestPoint_wrap(ImVec2 const* a, ImVec2 const* b, ImVec2 const* c, ImVec2 const* p, ImVec2* _out);
bool cImTriangleContainsPoint_wrap(ImVec2 const* a, ImVec2 const* b, ImVec2 const* c, ImVec2 const* p);
int ImGui_PlotEx_wrap(ImGuiPlotType plot_type, const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* size_arg);