generated-out/docking/dear-imgui-raw-docking-internal/src/DearImGui/Raw/Internal.hsc


-- C: const char* ImParseFormatFindEnd(const char* format)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImParseFormatFindEnd"
  cImParseFormatFindEnd :: CString -> IO CString
-- C: const char* ImParseFormatFindStart(const char* format)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImParseFormatFindStart"
  cImParseFormatFindStart :: CString -> IO CString
-- C: int ImParseFormatPrecision(const char* format, int default_value)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImParseFormatPrecision"
  cImParseFormatPrecision :: CString -> CInt -> IO CInt
-- C: void ImParseFormatSanitizeForPrinting(const char* fmt_in, char* fmt_out, size_t fmt_out_size)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImParseFormatSanitizeForPrinting"
  cImParseFormatSanitizeForPrinting :: CString -> (Ptr CChar) -> CSize -> IO ()
-- C: const char* ImParseFormatSanitizeForScanning(const char* fmt_in, char* fmt_out, size_t fmt_out_size)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImParseFormatSanitizeForScanning"
  cImParseFormatSanitizeForScanning :: CString -> (Ptr CChar) -> CSize -> IO CString
-- C: const char* ImParseFormatTrimDecorations(const char* format, char* buf, size_t buf_size)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImParseFormatTrimDecorations"
  cImParseFormatTrimDecorations :: CString -> (Ptr CChar) -> CSize -> IO CString
-- C: float ImPow(float x, float y)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImPow"
  cImPow :: CFloat -> CFloat -> IO CFloat
-- C: double ImPow(double x, double y)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImPowDouble"
  cImPowDouble :: CDouble -> CDouble -> IO CDouble
foreign import capi unsafe "DearImGuiWrappers.h cImRotate_wrap"
  c_cImRotate :: (Ptr ImVec2) -> CFloat -> CFloat -> (Ptr ImVec2) -> IO ()

cImRotate :: ImVec2 -> CFloat -> CFloat -> IO ImVec2
cImRotate v cos_a sin_a =
  with v $ \_p0 -> alloca $ \_pOut -> c_cImRotate _p0 cos_a sin_a _pOut >> peek _pOut

-- C: float ImRound64(float f)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImRound64"
  cImRound64 :: CFloat -> IO CFloat
-- C: float ImRsqrt(float x)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImRsqrt"
  cImRsqrt :: CFloat -> IO CFloat
-- C: double ImRsqrt(double x)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImRsqrtDouble"
  cImRsqrtDouble :: CDouble -> IO CDouble
-- C: float ImSaturate(float f)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImSaturate"
  cImSaturate :: CFloat -> IO CFloat
-- C: float ImSign(float x)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImSign"
  cImSign :: CFloat -> IO CFloat
-- C: double ImSign(double x)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImSignDouble"
  cImSignDouble :: CDouble -> IO CDouble
-- C: const char* ImStrSkipBlank(const char* str)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImStrSkipBlank"
  cImStrSkipBlank :: CString -> IO CString
-- C: void ImStrTrimBlanks(char* str)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImStrTrimBlanks"
  cImStrTrimBlanks :: (Ptr CChar) -> IO ()
-- C: const char* ImStrbol(const char* buf_mid_line, const char* buf_begin)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImStrbol"
  cImStrbol :: CString -> CString -> IO CString
-- C: const char* ImStrchrRange(const char* str_begin, const char* str_end, char c)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImStrchrRange"
  cImStrchrRange :: CString -> CString -> CChar -> IO CString
-- C: char* ImStrdup(const char* str)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImStrdup"
  cImStrdup :: CString -> IO (Ptr CChar)
-- C: char* ImStrdupcpy(char* dst, size_t* p_dst_size, const char* str)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImStrdupcpy"
  cImStrdupcpy :: (Ptr CChar) -> (Ptr CSize) -> CString -> IO (Ptr CChar)
-- C: const char* ImStreolRange(const char* str, const char* str_end)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImStreolRange"
  cImStreolRange :: CString -> CString -> IO CString
-- C: int ImStricmp(const char* str1, const char* str2)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImStricmp"
  cImStricmp :: CString -> CString -> IO CInt
-- C: const char* ImStristr(const char* haystack, const char* haystack_end, const char* needle, const char* needle_end)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImStristr"
  cImStristr :: CString -> CString -> CString -> CString -> IO CString
-- C: int ImStrlenW(const ImWchar* str)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImStrlenW"
  cImStrlenW :: (Ptr ImWchar) -> IO CInt
-- C: void ImStrncpy(char* dst, const char* src, size_t count)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImStrncpy"
  cImStrncpy :: (Ptr CChar) -> CString -> CSize -> IO ()
-- C: int ImStrnicmp(const char* str1, const char* str2, size_t count)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImStrnicmp"
  cImStrnicmp :: CString -> CString -> CSize -> IO CInt
-- C: const char* ImTextCalcWordWrapNextLineStart(const char* text, const char* text_end, ImDrawTextFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImTextCalcWordWrapNextLineStart"
  cImTextCalcWordWrapNextLineStart :: CString -> CString -> ImDrawTextFlags -> IO CString
-- C: int ImTextCharFromUtf8(unsigned int* out_char, const char* in_text, const char* in_text_end)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImTextCharFromUtf8"
  cImTextCharFromUtf8 :: (Ptr CUInt) -> CString -> CString -> IO CInt
-- C: int ImTextCharToUtf8(char[5] out_buf, unsigned int c)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImTextCharToUtf8"
  cImTextCharToUtf8 :: (Ptr CChar) -> CUInt -> IO CInt
-- C: void ImTextClassifierClear(ImU32* bits, unsigned int codepoint_min, unsigned int codepoint_end, ImWcharClass char_class)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImTextClassifierClear"
  cImTextClassifierClear :: (Ptr ImU32) -> CUInt -> CUInt -> ImWcharClass -> IO ()
-- C: void ImTextClassifierSetCharClass(ImU32* bits, unsigned int codepoint_min, unsigned int codepoint_end, ImWcharClass char_class, unsigned int c)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImTextClassifierSetCharClass"
  cImTextClassifierSetCharClass :: (Ptr ImU32) -> CUInt -> CUInt -> ImWcharClass -> CUInt -> IO ()
-- C: void ImTextClassifierSetCharClassFromStr(ImU32* bits, unsigned int codepoint_min, unsigned int codepoint_end, ImWcharClass char_class, const char* s)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImTextClassifierSetCharClassFromStr"
  cImTextClassifierSetCharClassFromStr :: (Ptr ImU32) -> CUInt -> CUInt -> ImWcharClass -> CString -> IO ()
-- C: int ImTextCountCharsFromUtf8(const char* in_text, const char* in_text_end)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImTextCountCharsFromUtf8"
  cImTextCountCharsFromUtf8 :: CString -> CString -> IO CInt
-- C: int ImTextCountLines(const char* in_text, const char* in_text_end)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImTextCountLines"
  cImTextCountLines :: CString -> CString -> IO CInt
-- C: int ImTextCountUtf8BytesFromChar(const char* in_text, const char* in_text_end)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImTextCountUtf8BytesFromChar"
  cImTextCountUtf8BytesFromChar :: CString -> CString -> IO CInt
-- C: int ImTextCountUtf8BytesFromStr(const ImWchar* in_text, const ImWchar* in_text_end)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImTextCountUtf8BytesFromStr"
  cImTextCountUtf8BytesFromStr :: (Ptr ImWchar) -> (Ptr ImWchar) -> IO CInt
-- C: const char* ImTextFindPreviousUtf8Codepoint(const char* in_text_start, const char* in_p)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImTextFindPreviousUtf8Codepoint"
  cImTextFindPreviousUtf8Codepoint :: CString -> CString -> IO CString
-- C: const char* ImTextFindValidUtf8CodepointEnd(const char* in_text_start, const char* in_text_end, const char* in_p)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImTextFindValidUtf8CodepointEnd"
  cImTextFindValidUtf8CodepointEnd :: CString -> CString -> CString -> IO CString
-- C: void ImTextInitClassifiers()
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImTextInitClassifiers"
  cImTextInitClassifiers :: IO ()
-- C: int ImTextStrFromUtf8(ImWchar* out_buf, int out_buf_size, const char* in_text, const char* in_text_end, const char** in_remaining)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImTextStrFromUtf8"
  cImTextStrFromUtf8 :: (Ptr ImWchar) -> CInt -> CString -> CString -> (Ptr CString) -> IO CInt
-- C: int ImTextStrToUtf8(char* out_buf, int out_buf_size, const ImWchar* in_text, const ImWchar* in_text_end)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImTextStrToUtf8"
  cImTextStrToUtf8 :: (Ptr CChar) -> CInt -> (Ptr ImWchar) -> (Ptr ImWchar) -> IO CInt
-- C: int ImTextureDataGetFormatBytesPerPixel(ImTextureFormat format)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImTextureDataGetFormatBytesPerPixel"
  cImTextureDataGetFormatBytesPerPixel :: ImTextureFormat -> IO CInt
-- C: const char* ImTextureDataGetFormatName(ImTextureFormat format)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImTextureDataGetFormatName"
  cImTextureDataGetFormatName :: ImTextureFormat -> IO CString
-- C: const char* ImTextureDataGetStatusName(ImTextureStatus status)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImTextureDataGetStatusName"
  cImTextureDataGetStatusName :: ImTextureStatus -> IO CString
-- C: char ImToUpper(char c)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h cImToUpper"
  cImToUpper :: CChar -> IO CChar
foreign import capi unsafe "DearImGuiWrappers.h cImTriangleArea_wrap"
  c_cImTriangleArea :: (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> IO CFloat

cImTriangleArea :: ImVec2 -> ImVec2 -> ImVec2 -> IO CFloat
cImTriangleArea a b c =
  with a $ \_p0 -> with b $ \_p1 -> with c $ \_p2 -> c_cImTriangleArea _p0 _p1 _p2

foreign import capi unsafe "DearImGuiWrappers.h cImTriangleBarycentricCoords_wrap"
  c_cImTriangleBarycentricCoords :: (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr CFloat) -> (Ptr CFloat) -> (Ptr CFloat) -> IO ()

cImTriangleBarycentricCoords :: ImVec2 -> ImVec2 -> ImVec2 -> ImVec2 -> (Ptr CFloat) -> (Ptr CFloat) -> (Ptr CFloat) -> IO ()
cImTriangleBarycentricCoords a b c p out_u out_v out_w =
  with a $ \_p0 -> with b $ \_p1 -> with c $ \_p2 -> with p $ \_p3 -> c_cImTriangleBarycentricCoords _p0 _p1 _p2 _p3 out_u out_v out_w

foreign import capi unsafe "DearImGuiWrappers.h cImTriangleClosestPoint_wrap"
  c_cImTriangleClosestPoint :: (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> IO ()

cImTriangleClosestPoint :: ImVec2 -> ImVec2 -> ImVec2 -> ImVec2 -> IO ImVec2
cImTriangleClosestPoint a b c p =
  with a $ \_p0 -> with b $ \_p1 -> with c $ \_p2 -> with p $ \_p3 -> alloca $ \_pOut -> c_cImTriangleClosestPoint _p0 _p1 _p2 _p3 _pOut >> peek _pOut

foreign import capi unsafe "DearImGuiWrappers.h cImTriangleContainsPoint_wrap"
  c_cImTriangleContainsPoint :: (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImVec2) -> IO CBool
